# EduSocrates-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: 01-data-pipeline.ipynb
openwebui_data/knowledge/economics/: chunks.json  faiss.index
openwebui_data/knowledge/economics/source/: chunks.txt
src/edusocrates_rag/: api.py  cli.py  ingest.py
src/edusocrates_rag/data_ingest/: ingest.py  vector_store.py
tests/: test_ingest.py  test_vector_store.py
