[build-system]
requires=["setuptools>=68"] # Must have: Danh sách gói dùng để dựng package.
build-backend = "setuptools.build_meta" # Must have: Trình biên dịch package, thuộc setuptools

[project]
name = "edusocrates_rag"
version = "0.0.1"
description = "EduSocrates-RAG: LoRA-fine-tuned LLM + RAG for Socratic Q&A"
requires-python = ">=3.11"
authors = [
    {name = "Khoi Le", email = "khoile54642005@gmail.com"}
]

[tool.setuptools.packages.find]
where = ["src"]

#[project.scripts]
